# dogs_management_api

./: Cargo.toml  README.md
migrations/: 01_example_dogs_table.sql  02_example_breeds_table.sql  03_add_fk_dogs_table.sql
src/: main.rs
src/breed/: mod.rs  model.rs  repository.rs  router.rs  service.rs
src/dog/: mod.rs  model.rs  repository.rs  router.rs  service.rs
